--- a/src/index.scss
+++ b/src/index.scss
@@ -138,13 +138,6 @@ html {
     margin: 0 4% !important;
     margin-top: 7rem !important;
     margin-right: 0 !important;
-    background-color: darkgoldenrod;
-  }
-
-  .projects {
-    display: flex;
-    margin: 0 4%;
-    margin-top: 10rem !important;
   }
 
   .achievements {
