--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -98,22 +98,22 @@
     }
   }
 
-  .technologies-grid {
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr) !important;
+  // .technologies-grid {
+  //   padding: 1rem;
+  //   display: grid;
+  //   grid-template-columns: repeat(10, 1fr) !important;
 
-    .technology {
-      display: flex;
-      margin: 1rem;
-      padding: 1.5rem !important;
-      border-radius: 50%;
-      background-color: rgb(233, 233, 233);
-      width: fit-content;
-      transition: 0.3s;
-      cursor: pointer;
-    }
-  }
+  //   .technology {
+  //     display: flex;
+  //     margin: 1rem;
+  //     padding: 1.5rem !important;
+  //     border-radius: 50%;
+  //     background-color: rgb(233, 233, 233);
+  //     width: fit-content;
+  //     transition: 0.3s;
+  //     cursor: pointer;
+  //   }
+  // }
 }
 
 // @media screen and (max-width: 980px) {
